--- a/config.example.json
+++ b/config.example.json
@@ -1,7 +1,7 @@
 {
   "user": {
-    "email": "YOUR_USERNAME",
-    "password": "YOUR_PASSWORD"
+    "email": "",
+    "password": ""
   },
   "defaultTarget": "dev",
   "targets": {
@@ -21,7 +21,7 @@
       "bundle": true,
       "lint": true,
       "lintRequired": false,
-      "localPath": "PATH_TO_LOCAL_FOLDER"
+      "localPath": ""
     }
   }
 }
